# LightUp-Puzzle-Game

./: .clang-format  .gitignore  CMakeLists.txt  README.md  game.c  game.h  game_aux.c  game_sdl.c  game_solve.c  game_text.c  main_sdl.c  model.h  opti_solver.c
Game_files/: 3x3.txt  default_solution.txt  save_sol_game.txt  saved_def_gt.txt
android/: AndroidManifest.xml  build.xml
android/jni/src/: Android.mk  game.h  game_sdl.c  game_test_maaudrain.c  game_tools.c  game_tools.h  main_sdl.c  model.h
tests/: game_test_abdouldiallo.c  game_test_arledoux.c  game_tests_game_tools.c
web/make-game-web/: game.css  game.html  game.js  game.wasm  game_script.js  rendu.txt  wrapper.c
web/make-game-web/src/: game.c  game.h  game_aux.c  game_aux.h  game_ext.h  game_solve.c  game_tools.c  game_tools.h  queue.c  queue.h
